4.k8s/network/mysqlsvc-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-svc
  namespace: example
spec:
  type: ClusterIP
  clusterIP: None # 无头服务
  ports:
  - port: 3306
    targetPort: 3306
    protocol: TCP
    name: tcp
---
apiVersion: v1
kind: Endpoints
metadata:
  name: mysql-svc
  namespace: example
subsets:
  - addresses:
    - ip: 192.168.0.200
    ports:
    - port: 3306
      name: tcp
